--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ video {
   title={JoyHallo: Digital human model for Mandarin},
   author={Sheng Shi and Xuyang Cao and Jun Zhao and Guoxin Wang},
   year={2024},
-  url={https://huggingface.co/spaces/jdh-algo/JoyHallo-v1}
+  url={https://github.com/jdh-algo/JoyHallo}
 }</code></pre>
   
     </div>
