--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ video {
       <div class="select-wrapper">
         <select id="project-nav" onchange="location = this.value;">
           <option value="">More Research</option>
-          <option value="D:\joyhallo_demo\index.html">JoyHallo</option>
+          <option value="https://jdh-algo.github.io/JoyHallo/">JoyHallo</option>
           <option value="https://jdh-algo.github.io/JoyType/">JoyType</option>
         </select>
       </div>
