update home link

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ video {
 
                 <!-- huggingface demo Link -->
                 <span class="link-block">
-                  <a href="https://huggingface.co/spaces/jdh-algo/JoyHallo-v1/tree/main" target="_blank"
+                  <a href="https://huggingface.co/jdh-algo/JoyHallo-v1" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <img src="./static/images/hf-logo.png">
