--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ video {
                   </a>
                 </span>
 
-                <!-- huggingface demo Link -->
+                <!-- huggingface model Link -->
                 <span class="link-block">
                   <a href="https://huggingface.co/jdh-algo/JoyHallo-v1" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
@@ -353,6 +353,17 @@ video {
                       <img src="./static/images/hf-logo.png">
                     </span>
                     <span>HuggingFace</span>
+                  </a>
+                </span>
+
+                <!-- huggingface demo Link -->
+                <span class="link-block">
+                  <a href="https://huggingface.co/spaces/jdh-algo/JoyHallo" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <img src="./static/images/hf-logo.png">
+                    </span>
+                    <span>Gradio</span>
                   </a>
                 </span>
 
