--- a/index.html
+++ b/index.html
@@ -324,13 +324,24 @@ video {
 
             <div class="column has-text-centered">
               <div class="publication-links">
+                
                 <span class="link-block">
-                  <a href=""
+                  <a href="https://arxiv.org/pdf/2409.13268" target="_blank"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="ai ai-arxiv"></i>
                     </span>
-                    <span>arXiv(Coming)</span>
+                    <span>Paper</span>
+                  </a>
+                </span>
+
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/2409.13268" target="_blank"
+                     class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                        <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>arXiv</span>
                   </a>
                 </span>
 
@@ -638,11 +649,14 @@ video {
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{JoyHallo2024,
-  title={JoyHallo: Digital human model for Mandarin},
+      <pre><code>@misc{shi2024joyhallo,
+  title={JoyHallo: Digital human model for Mandarin}, 
   author={Sheng Shi and Xuyang Cao and Jun Zhao and Guoxin Wang},
   year={2024},
-  url={https://github.com/jdh-algo/JoyHallo}
+  eprint={2409.13268},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  url={https://arxiv.org/abs/2409.13268}, 
 }</code></pre>
   
     </div>
