--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@ video {
           <option value="">More Research</option>
           <option value="https://jdh-algo.github.io/JoyHallo/">JoyHallo</option>
           <option value="https://jdh-algo.github.io/JoyType/">JoyType</option>
+          <option value="https://jdh-algo.github.io/JoyVASA/">JoyVASA</option>
         </select>
       </div>
     </div>
