--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@ video {
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a target="_blank">Shi Sheng</a><sup></sup>,</span>
+                <a target="_blank">Sheng Shi</a><sup></sup>,</span>
               <span class="author-block">
-                <a target="_blank">Cao Xuyang</a><sup></sup>,</span>
+                <a target="_blank">Xuyang Cao</a><sup></sup>,</span>
               <span class="author-block">
-                <a target="_blank">Zhao Jun</a><sup></sup>,</span>
+                <a target="_blank">Jun Zhao</a><sup></sup>,</span>
               <span class="author-block">
-                <a target="_blank">Wang Guoxin</a><sup></sup></span>
+                <a target="_blank">Guoxin Wang</a><sup></sup></span>
             </div>
 
             <div class="is-size-5 publication-authors">
