--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@ video {
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a target="_blank">Sheng Shi</a><sup></sup>,</span>
+                <a target="_blank">Sheng Shi</a><sup></sup>,</span>&#20;
               <span class="author-block">
-                <a target="_blank">Xuyang Cao</a><sup></sup>,</span>
+                <a target="_blank">Xuyang Cao</a><sup></sup>,</span>&#20;
               <span class="author-block">
-                <a target="_blank">Jun Zhao</a><sup></sup>,</span>
+                <a target="_blank">Jun Zhao</a><sup></sup>,</span>&#20;
               <span class="author-block">
                 <a target="_blank">Guoxin Wang</a><sup></sup></span>
             </div>
